force-app/main/default/objects/wkdw__ArticleToFlowLink__c/wkdw__ArticleToFlowLink__c.object-meta.xml
<CustomObject>
    <description>Establishes the linkage between a knowledge article and any existing flows, which get displayed at the bottom of the knowledge article.</description>
    <label>Article To Flow Link</label>
    <nameField>
        <displayFormat>AFL-{00000}</displayFormat>
        <label>Article To Flow Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Article To Flow Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>