force-app/main/default/objects/wkdw__ArticleToFlowLink__c/fields/wkdw__ArticleNumber__c.field-meta.xml
<CustomField>
    <fullName>wkdw__ArticleNumber__c</fullName>
    <description>The article number from which the associated flows are launched.</description>
    <label>Article Number</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>