force-app/main/default/objects/wkdw__ArticleToFlowLink__c/fields/wkdw__FlowAPIName__c.field-meta.xml
<CustomField>
    <fullName>wkdw__FlowAPIName__c</fullName>
    <description>API Name of a flow to launch from the knowledge article.</description>
    <label>Flow API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>