force-app/main/default/objects/wkdw__ArticleToFlowLink__c/fields/wkdw__IsActive__c.field-meta.xml
<CustomField>
    <fullName>wkdw__IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checkbox indicating whether the button for the configured flow should be visible on the article page.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>