force-app/main/default/objects/wkdw__ArticleToFlowLink__c/fields/wkdw__Label__c.field-meta.xml
<CustomField>
    <fullName>wkdw__Label__c</fullName>
    <description>The employee-facing label for the button that launches the flow from the knowledge article.</description>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>